Renamed the methods and added the ability to view only your own comics.
