# openapi.yaml
@@ -102,7 +102,7 @@ components:
           type: string
 
 paths:
-  /auth:
+  /api/user/auth:
     post:
       tags:
         - Authentication
@@ -137,7 +137,7 @@ paths:
         '500':
           description: Authentication failed
 
-  /register:
+  /api/user/register:
     post:
       tags:
         - Authentication
@@ -178,7 +178,7 @@ paths:
         '500':
           description: Registration failed
 
-  /user:
+  /api/user:
     get:
       tags:
         - User
